# polybar-mpris-watcher-rs

./: Cargo.toml  README.md
src/: args.rs  control.rs  main.rs  watcher.rs
